# CMPT433_as2

./: CMakeLists.txt  noworky.c
app/: CMakeLists.txt
app/include/: draw_stuff.h  updateLcd.h
app/src/: draw_stuff.c  main.c  updateLcd.c
hal/: CMakeLists.txt
hal/include/hal/: gpio.h  i2c.h  lcd.h  light_sensor.h  pwm_rotary.h  rotary_encoder_statemachine.h  udp_listener.h
hal/src/: btn_statemachine.c  gpio.c  i2c.c  lcd.c  light_sensor.c  periodTimer.c  pwm_rotary.c  rotary_encoder_statemachine.c  udp_listener.c
